feat(server): add ssh connectivity (#78)